--- a/about.html
+++ b/about.html
@@ -269,10 +269,12 @@
           <div class="hamburger" id="hamburger"><span></span></div>
         </div>
       </header>
-      <section class="block-hero"><svg width="636" height="921" viewBox="0 0 636 921" fill="none" xmlns="http://www.w3.org/2000/svg" class="fragment fragment_about">
-<path d="M814.735 481.606C933.343 456.913 822.435 386.326 886.657 348.98C986.01 291.205 1059.56 146.128 1021.83 36.375C988.45 -60.7557 841.018 -140.052 742.647 -123.97C632.206 -105.915 563.215 17.8565 556.064 88.1458C546.398 183.165 521.583 240.294 397.807 247.966C299.918 254.033 209.973 287.507 158.942 325.525C66.717 394.231 6.74209 510.271 60.3812 651.66C114.02 793.048 320.476 862.503 466.757 812.056C613.038 761.609 657.511 650.424 672.567 595.208C686.029 545.986 766.689 498.847 814.735 481.606Z" fill="#009BDF" fill-opacity="0.08"/>
+      <section class="block-hero">
+        <div class="anim-fragment-pages"><svg width="636" height="921" viewBox="0 0 636 921" id="fragment-about" fill="none" xmlns="http://www.w3.org/2000/svg" class="fragment fragment_about">
+<path class="fragment-path_about_1" d="M814.735 481.606C933.343 456.913 822.435 386.326 886.657 348.98C986.01 291.205 1059.56 146.128 1021.83 36.375C988.45 -60.7557 841.018 -140.052 742.647 -123.97C632.206 -105.915 563.215 17.8565 556.064 88.1458C546.398 183.165 521.583 240.294 397.807 247.966C299.918 254.033 209.973 287.507 158.942 325.525C66.717 394.231 6.74209 510.271 60.3812 651.66C114.02 793.048 320.476 862.503 466.757 812.056C613.038 761.609 657.511 650.424 672.567 595.208C686.029 545.986 766.689 498.847 814.735 481.606Z" fill="#009BDF" fill-opacity="0.08"/>
 </svg>
 
+        </div>
         <div class="block-hero__img" style="background-image:url('img/lorem/about_hero.png');">
         </div>
         <div class="block-hero__mob-img" style="background-image:url('img/lorem/mobile_about.jpg');">
@@ -291,10 +293,12 @@
           </div>
         </div>
       </section>
-      <section class="approach"><svg width="270" height="568" viewBox="0 0 270 568" fill="none" xmlns="http://www.w3.org/2000/svg" class="fragment fragment_about">
-<path d="M102.837 294.559C109.616 289.348 155.986 264.785 179.072 239.158C214.786 199.512 226.697 124.941 194.439 81.782C165.89 43.587 96.4717 9.66284 35.1165 24.3536C-15.4115 36.452 -106.384 81.782 -79.3836 161.854C-65.2151 203.873 -18.5018 254.19 -55.4178 268.467C-92.3338 282.743 -132.832 312.616 -149.992 336.667C-181.003 380.132 -183.488 439.768 -143.194 490.274C-102.899 540.78 -3.67906 583.834 51.6853 501.853C68.5945 478.826 61.8466 415.527 51.6853 377.354C41.524 339.18 84.0464 309.002 102.837 294.559Z" fill="#009BDF" fill-opacity="0.08"/>
+      <section class="approach">
+        <div class="anim-fragment-pages"><svg width="270" height="568" viewBox="0 0 270 568" id="fragment-about-2" fill="none" xmlns="http://www.w3.org/2000/svg" class="fragment fragment_about">
+<path class="fragment-path_about_2" d="M102.837 294.559C109.616 289.348 155.986 264.785 179.072 239.158C214.786 199.512 226.697 124.941 194.439 81.782C165.89 43.587 96.4717 9.66284 35.1165 24.3536C-15.4115 36.452 -106.384 81.782 -79.3836 161.854C-65.2151 203.873 -18.5018 254.19 -55.4178 268.467C-92.3338 282.743 -132.832 312.616 -149.992 336.667C-181.003 380.132 -183.488 439.768 -143.194 490.274C-102.899 540.78 -3.67906 583.834 51.6853 501.853C68.5945 478.826 61.8466 415.527 51.6853 377.354C41.524 339.18 84.0464 309.002 102.837 294.559Z" fill="#009BDF" fill-opacity="0.08"/>
 </svg>
 
+        </div>
         <div class="container container_s">
           <h3>OUR APPROACH</h3>
           <div class="row">
@@ -371,13 +375,15 @@
         </div><img class="partnership__map" src="/img/svg/world-map.svg" data-aos="fade-up" alt="" role="presentation"/>
       </section>
       <section class="contact-us contact-us_about section">
-        <svg width="303" height="928" viewBox="0 0 303 928" fill="none" xmlns="http://www.w3.org/2000/svg" class="fragment fragment_about">
-<path d="M460.937 415.22C499.712 365.069 537.433 380.827 588.946 351.906C680.674 300.406 688.898 169.17 643.847 78.9921C603.978 -0.814843 492.575 -15.5987 420.836 16.0156C340.294 51.5091 307.002 172.958 312.246 236.256C319.336 321.824 309.269 376.636 217.102 405.327C144.21 428.018 81.4558 473.489 48.7299 516.079C-10.4124 593.046 -18.3531 697.607 43.4857 812.885C105.324 928.163 251.782 961.362 354.446 890.935C457.111 820.508 436.021 682.646 439.019 631.251C441.721 585.428 405.283 487.202 460.937 415.22Z" fill="#009BDF" fill-opacity="0.08"/>
+        <div class="anim-fragment-pages">
+          <svg width="303" height="928" viewBox="0 0 303 928" fill="none" id="fragment-about-3" xmlns="http://www.w3.org/2000/svg" class="fragment fragment_about">
+<path class="fragment-path_about_3" d="M460.937 415.22C499.712 365.069 537.433 380.827 588.946 351.906C680.674 300.406 688.898 169.17 643.847 78.9921C603.978 -0.814843 492.575 -15.5987 420.836 16.0156C340.294 51.5091 307.002 172.958 312.246 236.256C319.336 321.824 309.269 376.636 217.102 405.327C144.21 428.018 81.4558 473.489 48.7299 516.079C-10.4124 593.046 -18.3531 697.607 43.4857 812.885C105.324 928.163 251.782 961.362 354.446 890.935C457.111 820.508 436.021 682.646 439.019 631.251C441.721 585.428 405.283 487.202 460.937 415.22Z" fill="#009BDF" fill-opacity="0.08"/>
 </svg>
-        <svg width="710" height="875" viewBox="0 0 710 875" fill="none" xmlns="http://www.w3.org/2000/svg" class="fragment fragment_about">
-<path d="M233.078 319.017C206.978 267.459 233.07 237.072 228.469 180.124C220.277 78.7186 118.551 30.8451 30.4744 45.2807C-47.4725 58.0561 -99.2011 157.526 -99.7034 234.18C-100.267 320.24 -15.3348 388.518 37.0317 403.01C107.823 422.6 147.932 448.786 137.775 543.615C129.742 618.612 143.513 691.123 165.75 734.718C205.938 813.504 286.489 852.943 400.603 830.523C514.718 808.103 593.701 681.549 574.333 564.137C554.964 446.725 437.446 424.187 397.527 405.647C361.947 389.089 270.54 393.019 233.078 319.017Z" fill="#009BDF" fill-opacity="0.08"/>
+          <svg width="710" height="875" id="fragment-about-4" viewBox="0 0 710 875" fill="none" xmlns="http://www.w3.org/2000/svg" class="fragment fragment_about">
+<path class="fragment-path_about_4" d="M233.078 319.017C206.978 267.459 233.07 237.072 228.469 180.124C220.277 78.7186 118.551 30.8451 30.4744 45.2807C-47.4725 58.0561 -99.2011 157.526 -99.7034 234.18C-100.267 320.24 -15.3348 388.518 37.0317 403.01C107.823 422.6 147.932 448.786 137.775 543.615C129.742 618.612 143.513 691.123 165.75 734.718C205.938 813.504 286.489 852.943 400.603 830.523C514.718 808.103 593.701 681.549 574.333 564.137C554.964 446.725 437.446 424.187 397.527 405.647C361.947 389.089 270.54 393.019 233.078 319.017Z" fill="#009BDF" fill-opacity="0.08"/>
 </svg>
 
+        </div>
         <div class="container">
           <h3>Contact us</h3>
           <form class="contact-form" data-aos="fade-up">
@@ -403,7 +409,7 @@
             </div>
             <div class="form-action">
               <button class="btn" type="submit">отправить</button>
-              <div class="g-recaptcha" data-sitekey="6LdAffoUAAAAAKPUHPIIFWeWyqFgxE6sHFWzI67e" data-callback="onSubmit" data-size="invisible"></div>
+              <div class="g-recaptcha" data-sitekey="AIzaSyBHN0lIvWDLZ759psMu3UE5XLHYwKzPooM" data-callback="onSubmit" data-size="invisible"></div>
             </div>
             <div class="form-thank formThanks">
               <div class="wrap">
