--- a/contacts.html
+++ b/contacts.html
@@ -270,10 +270,12 @@
         </div>
       </header>
       <div class="contacts">
-        <div class="contacts__top"><svg width="636" height="921" viewBox="0 0 636 921" fill="none" xmlns="http://www.w3.org/2000/svg" class="fragment fragment_about">
-<path d="M814.735 481.606C933.343 456.913 822.435 386.326 886.657 348.98C986.01 291.205 1059.56 146.128 1021.83 36.375C988.45 -60.7557 841.018 -140.052 742.647 -123.97C632.206 -105.915 563.215 17.8565 556.064 88.1458C546.398 183.165 521.583 240.294 397.807 247.966C299.918 254.033 209.973 287.507 158.942 325.525C66.717 394.231 6.74209 510.271 60.3812 651.66C114.02 793.048 320.476 862.503 466.757 812.056C613.038 761.609 657.511 650.424 672.567 595.208C686.029 545.986 766.689 498.847 814.735 481.606Z" fill="#009BDF" fill-opacity="0.08"/>
+        <div class="contacts__top">
+          <div class="anim-fragment-pages"><svg width="636" height="921" viewBox="0 0 636 921" id="fragment-about" fill="none" xmlns="http://www.w3.org/2000/svg" class="fragment fragment_about">
+<path class="fragment-path_about_1" d="M814.735 481.606C933.343 456.913 822.435 386.326 886.657 348.98C986.01 291.205 1059.56 146.128 1021.83 36.375C988.45 -60.7557 841.018 -140.052 742.647 -123.97C632.206 -105.915 563.215 17.8565 556.064 88.1458C546.398 183.165 521.583 240.294 397.807 247.966C299.918 254.033 209.973 287.507 158.942 325.525C66.717 394.231 6.74209 510.271 60.3812 651.66C114.02 793.048 320.476 862.503 466.757 812.056C613.038 761.609 657.511 650.424 672.567 595.208C686.029 545.986 766.689 498.847 814.735 481.606Z" fill="#009BDF" fill-opacity="0.08"/>
 </svg>
 
+          </div>
           <div class="container container_s">
             <div class="row">
               <div class="contacts__item">
@@ -298,10 +300,12 @@
             </div>
           </div>
         </div>
-        <div class="contacts__bottom" data-aos="fade-up"><svg width="270" height="568" viewBox="0 0 270 568" fill="none" xmlns="http://www.w3.org/2000/svg" class="fragment fragment_about">
-<path d="M102.837 294.559C109.616 289.348 155.986 264.785 179.072 239.158C214.786 199.512 226.697 124.941 194.439 81.782C165.89 43.587 96.4717 9.66284 35.1165 24.3536C-15.4115 36.452 -106.384 81.782 -79.3836 161.854C-65.2151 203.873 -18.5018 254.19 -55.4178 268.467C-92.3338 282.743 -132.832 312.616 -149.992 336.667C-181.003 380.132 -183.488 439.768 -143.194 490.274C-102.899 540.78 -3.67906 583.834 51.6853 501.853C68.5945 478.826 61.8466 415.527 51.6853 377.354C41.524 339.18 84.0464 309.002 102.837 294.559Z" fill="#009BDF" fill-opacity="0.08"/>
+        <div class="contacts__bottom" data-aos="fade-up">
+          <div class="anim-fragment-pages"><svg width="270" height="568" viewBox="0 0 270 568" id="fragment-about-2" fill="none" xmlns="http://www.w3.org/2000/svg" class="fragment fragment_about">
+<path class="fragment-path_about_2" d="M102.837 294.559C109.616 289.348 155.986 264.785 179.072 239.158C214.786 199.512 226.697 124.941 194.439 81.782C165.89 43.587 96.4717 9.66284 35.1165 24.3536C-15.4115 36.452 -106.384 81.782 -79.3836 161.854C-65.2151 203.873 -18.5018 254.19 -55.4178 268.467C-92.3338 282.743 -132.832 312.616 -149.992 336.667C-181.003 380.132 -183.488 439.768 -143.194 490.274C-102.899 540.78 -3.67906 583.834 51.6853 501.853C68.5945 478.826 61.8466 415.527 51.6853 377.354C41.524 339.18 84.0464 309.002 102.837 294.559Z" fill="#009BDF" fill-opacity="0.08"/>
 </svg>
 
+          </div>
           <div class="container container_s">
             <div class="map" id="map">
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2429.066435516898!2d13.31776601535257!3d52.49603697980965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a850f04d6dc53f%3A0xcc5c61542f5ab602!2zRW1zZXIgU3RyLiwgQmVybGluLCDQk9C10YDQvNCw0L3QuNGP!5e0!3m2!1sru!2sua!4v1591257490861!5m2!1sru!2sua" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
@@ -309,10 +313,12 @@
           </div>
         </div>
       </div>
-      <section class="contact-us contact-us_contacts section"><svg width="456" height="901" viewBox="0 0 456 901" fill="none" xmlns="http://www.w3.org/2000/svg" class="fragment fragment_contacts">
-<path d="M485.078 319.017C458.978 267.459 485.07 237.072 480.469 180.124C472.277 78.7186 370.551 30.8451 282.474 45.2807C204.527 58.0561 152.799 157.526 152.297 234.18C151.733 320.24 236.665 388.518 289.032 403.01C359.823 422.6 399.932 448.786 389.775 543.615C381.742 618.612 395.513 691.123 417.75 734.718C457.938 813.504 538.489 852.943 652.603 830.523C766.718 808.103 845.701 681.549 826.333 564.137C806.964 446.725 689.446 424.187 649.527 405.647C613.947 389.089 522.54 393.019 485.078 319.017Z" fill="#009BDF" fill-opacity="0.08"/>
+      <section class="contact-us contact-us_contacts section">
+        <div class="anim-fragment-pages anim-fragment-pages_contacts"><svg width="456" height="901" id="fragment-contacts" viewBox="0 0 456 901" fill="none" xmlns="http://www.w3.org/2000/svg" class="fragment fragment_contacts">
+<path class="fragment-path-cont" d="M485.078 319.017C458.978 267.459 485.07 237.072 480.469 180.124C472.277 78.7186 370.551 30.8451 282.474 45.2807C204.527 58.0561 152.799 157.526 152.297 234.18C151.733 320.24 236.665 388.518 289.032 403.01C359.823 422.6 399.932 448.786 389.775 543.615C381.742 618.612 395.513 691.123 417.75 734.718C457.938 813.504 538.489 852.943 652.603 830.523C766.718 808.103 845.701 681.549 826.333 564.137C806.964 446.725 689.446 424.187 649.527 405.647C613.947 389.089 522.54 393.019 485.078 319.017Z" fill="#009BDF" fill-opacity="0.08"/>
 </svg>
 
+        </div>
         <div class="container">
           <h3>Contact us</h3>
           <form class="contact-form" data-aos="fade-up">
@@ -338,7 +344,7 @@
             </div>
             <div class="form-action">
               <button class="btn" type="submit">отправить</button>
-              <div class="g-recaptcha" data-sitekey="6LdAffoUAAAAAKPUHPIIFWeWyqFgxE6sHFWzI67e" data-callback="onSubmit" data-size="invisible"></div>
+              <div class="g-recaptcha" data-sitekey="AIzaSyBHN0lIvWDLZ759psMu3UE5XLHYwKzPooM" data-callback="onSubmit" data-size="invisible"></div>
             </div>
             <div class="form-thank formThanks">
               <div class="wrap">
