--- a/home.html
+++ b/home.html
@@ -270,10 +270,12 @@
         </div>
       </header>
       <section class="hero">
-        <div class="container"><svg viewBox="0 0 828 1143" fill="none" xmlns="http://www.w3.org/2000/svg" class="fragment" >
-<path id="fragment-path" d="M265.915 615.86C257.099 631.754 250.604 649.251 246.846 668.089C228.46 761.298 287.658 853.864 379.929 876.36C477.032 900.047 574.436 839.559 596.592 742.376C600.317 726.037 601.713 709.703 600.873 693.755C598.305 642.585 620.548 593.319 660.775 561.767C706.982 525.582 741.32 473.526 754.528 411.275C783.384 274.887 697.617 138.654 562.064 105.741C421.275 71.4542 280.165 159.12 248.036 300.044C234.444 360.058 242.805 419.981 267.969 471.384C290.37 517.233 290.604 571.182 265.915 615.86Z"/>
+        <div class="container">
+          <div class="anim-fragment"><svg viewBox="0 0 828 1143" fill="#000" xmlns="http://www.w3.org/2000/svg" id="fragment" class="fragment">
+<path class="fragment-path" d="M265.915 615.86C257.099 631.754 250.604 649.251 246.846 668.089C228.46 761.298 287.658 853.864 379.929 876.36C477.032 900.047 574.436 839.559 596.592 742.376C600.317 726.037 601.713 709.703 600.873 693.755C598.305 642.585 620.548 593.319 660.775 561.767C706.982 525.582 741.32 473.526 754.528 411.275C783.384 274.887 697.617 138.654 562.064 105.741C421.275 71.4542 280.165 159.12 248.036 300.044C234.444 360.058 242.805 419.981 267.969 471.384C290.37 517.233 290.604 571.182 265.915 615.86Z"/>
 </svg>
 
+          </div>
         </div>
         <div class="hero-slider heroSlider">
           <div class="swiper-wrapper">
@@ -363,10 +365,12 @@
         </div>
       </section>
       <section class="industry section">
-        <div class="container"><svg viewBox="0 0 828 1143" fill="none" xmlns="http://www.w3.org/2000/svg" class="fragment" >
-<path id="fragment-path" d="M265.915 615.86C257.099 631.754 250.604 649.251 246.846 668.089C228.46 761.298 287.658 853.864 379.929 876.36C477.032 900.047 574.436 839.559 596.592 742.376C600.317 726.037 601.713 709.703 600.873 693.755C598.305 642.585 620.548 593.319 660.775 561.767C706.982 525.582 741.32 473.526 754.528 411.275C783.384 274.887 697.617 138.654 562.064 105.741C421.275 71.4542 280.165 159.12 248.036 300.044C234.444 360.058 242.805 419.981 267.969 471.384C290.37 517.233 290.604 571.182 265.915 615.86Z"/>
+        <div class="container">
+          <div class="anim-fragment"><svg viewBox="0 0 828 1143" fill="#000" xmlns="http://www.w3.org/2000/svg" id="fragment" class="fragment">
+<path class="fragment-path" d="M265.915 615.86C257.099 631.754 250.604 649.251 246.846 668.089C228.46 761.298 287.658 853.864 379.929 876.36C477.032 900.047 574.436 839.559 596.592 742.376C600.317 726.037 601.713 709.703 600.873 693.755C598.305 642.585 620.548 593.319 660.775 561.767C706.982 525.582 741.32 473.526 754.528 411.275C783.384 274.887 697.617 138.654 562.064 105.741C421.275 71.4542 280.165 159.12 248.036 300.044C234.444 360.058 242.805 419.981 267.969 471.384C290.37 517.233 290.604 571.182 265.915 615.86Z"/>
 </svg>
 
+          </div>
           <h3>INDUSTRY AREAS</h3>
           <div class="industry__desc">We supply all you need for production of
           </div>
@@ -415,10 +419,12 @@
       <section class="production lazy" data-src="img/lorem/production.png">
         <div class="production__bg-mob lazy" data-src="img/lorem/production-mob-bg.jpg">
         </div>
-        <div class="container"><svg viewBox="0 0 828 1143" fill="none" xmlns="http://www.w3.org/2000/svg" class="fragment" >
-<path id="fragment-path" d="M265.915 615.86C257.099 631.754 250.604 649.251 246.846 668.089C228.46 761.298 287.658 853.864 379.929 876.36C477.032 900.047 574.436 839.559 596.592 742.376C600.317 726.037 601.713 709.703 600.873 693.755C598.305 642.585 620.548 593.319 660.775 561.767C706.982 525.582 741.32 473.526 754.528 411.275C783.384 274.887 697.617 138.654 562.064 105.741C421.275 71.4542 280.165 159.12 248.036 300.044C234.444 360.058 242.805 419.981 267.969 471.384C290.37 517.233 290.604 571.182 265.915 615.86Z"/>
+        <div class="container">
+          <div class="anim-fragment"><svg viewBox="0 0 828 1143" fill="#000" xmlns="http://www.w3.org/2000/svg" id="fragment" class="fragment">
+<path class="fragment-path" d="M265.915 615.86C257.099 631.754 250.604 649.251 246.846 668.089C228.46 761.298 287.658 853.864 379.929 876.36C477.032 900.047 574.436 839.559 596.592 742.376C600.317 726.037 601.713 709.703 600.873 693.755C598.305 642.585 620.548 593.319 660.775 561.767C706.982 525.582 741.32 473.526 754.528 411.275C783.384 274.887 697.617 138.654 562.064 105.741C421.275 71.4542 280.165 159.12 248.036 300.044C234.444 360.058 242.805 419.981 267.969 471.384C290.37 517.233 290.604 571.182 265.915 615.86Z"/>
 </svg>
 
+          </div>
           <div class="production__row">
             <div class="production__info" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
               <h3>Anax — Crafting quality of production</h3>
@@ -552,7 +558,7 @@
             </div>
             <div class="form-action">
               <button class="btn" type="submit">отправить</button>
-              <div class="g-recaptcha" data-sitekey="6LdAffoUAAAAAKPUHPIIFWeWyqFgxE6sHFWzI67e" data-callback="onSubmit" data-size="invisible"></div>
+              <div class="g-recaptcha" data-sitekey="AIzaSyBHN0lIvWDLZ759psMu3UE5XLHYwKzPooM" data-callback="onSubmit" data-size="invisible"></div>
             </div>
             <div class="form-thank formThanks">
               <div class="wrap">
