--- a/blog.html
+++ b/blog.html
@@ -650,6 +650,8 @@
                     </div>
                     <div class="blog-item__tag">#<span>milk</span>
                     </div>
+                    <div class="blog-item__tag">#<span>milk</span>
+                    </div>
                   </div>
                   <div class="blog-item__info">
                     <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa officia deserunt mollitid est.</p>
@@ -670,6 +672,37 @@
           <li><a href="">44</a></li>
           <li class="next"><a href=""></a></li>
         </ul>
+        <div class="container">
+          <div class="tags">
+            <div class="tags__top">
+              <div class="blog-item__tag active">#<span>milk</span></div>
+              <div class="blog-item__tag">#<span>beer</span></div>
+              <div class="blog-item__tag active">#<span>juice</span></div>
+              <div class="blog-item__tag active">#<span>beer</span></div>
+              <div class="blog-item__tag">#<span>milk</span></div>
+              <div class="blog-item__tag">#<span>beer</span></div>
+              <div class="blog-item__tag">#<span>juice</span></div>
+              <div class="blog-item__tag">#<span>milk</span></div>
+              <div class="blog-item__tag">#<span>juice</span></div>
+              <div class="blog-item__tag">#<span>milk</span></div>
+              <div class="blog-item__tag">#<span>beer</span></div>
+              <div class="blog-item__tag">#<span>juice</span></div>
+              <div class="blog-item__tag">#<span>juice</span></div>
+              <div class="blog-item__tag">#<span>milk</span></div>
+              <div class="blog-item__tag">#<span>beer</span></div>
+              <div class="blog-item__tag">#<span>juice</span></div>
+              <div class="blog-item__tag">#<span>beer</span></div>
+              <div class="blog-item__tag">#<span>milk</span></div>
+              <div class="blog-item__tag">#<span>beer</span></div>
+              <div class="blog-item__tag">#<span>juice</span></div>
+              <div class="blog-item__tag">#<span>milk</span></div>
+              <div class="blog-item__tag">#<span>juice</span></div>
+              <div class="blog-item__tag">#<span>milk</span></div>
+              <div class="blog-item__tag">#<span>beer</span></div>
+              <div class="blog-item__tag">#<span>juice</span></div>
+            </div><a class="viev-all viev-all_tags" href=""><span>Show</span><span>Hide</span>all</a>
+          </div>
+        </div>
       </section>
       <footer class="footer">
         <div class="container">
