--- a/categories.html
+++ b/categories.html
@@ -351,6 +351,7 @@
                 <li><a href="http://anax.monamiadv.com/category.html">Молочная промышленность</a></li>
                 <li><a href="http://anax.monamiadv.com/category.html">Спирт</a></li>
                 <li><a href="http://anax.monamiadv.com/category.html">Моющие средства</a></li>
+                <li><a class="viev-all" href="http://anax.monamiadv.com/categories.html">Show all</a></li>
               </ul>
             </div>
             <div class="footer__col">
