--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body class="home-page">
     <div class="preloader" id="preloader">
-      <div class="preloader__loader"><img src="img/logo.png" alt=""/>
+      <div class="preloader__loader"><img src="img/svg/logo.svg" alt=""/>
       </div>
     </div>
     <div class="wrapper">
